feat: Implement user profile management with image upload